# Agent-Learning

./: .gitignore
HelloAgents/: .env.example  main.py  pyproject.toml  requirements.txt
HelloAgents/hello_agents/agents/: __init__.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
HelloAgents/hello_agents/core/: HelloAgentsLLM.py  __init__.py  agent.py  config.py  exceptions.py  llm.py  message.py
HelloAgents/hello_agents/tools/: __init__.py  async_executor.py  chain.py  registry.py
HelloAgents/hello_agents/tools/builtin/: __init__.py  calculator.py  search.py
HelloAgents/my_agents/agents/: __init__.py  plan_solve_agent.py  react_agent.py  reflection_agent.py  simple_agent.py
HelloAgents/my_agents/core/: __init__.py  agent.py  config.py  llm.py  message.py
HelloAgents/my_agents/tools/: __init__.py  async_executor.py  base.py  chain.py  registry.py
HelloAgents/my_agents/tools/builtin/: __init__.py  calculator.py  search.py
basic/: pyproject.toml  requirements.txt  sync_deps.sh
basic/config/prompts/: Plan-and-Solve.j2  ReAct.j2  Solver.j2  agentscope_role.j2
basic/config/prompts/reflection/: Execution.j2  Refine.j2  Reflection.j2
basic/src/AgentScope_practice/agents/: game_roles.py  main.py  structured_output_cn.py
basic/src/AgentScope_practice/tools/: Prompt.py
basic/src/Autogen_practice/: readme.md
basic/src/Autogen_practice/agents/: create_agent.py
basic/src/Autogen_practice/utils/: HelloAgentsLLM.py
basic/src/CAMEL/: main.py
basic/src/LangGraph_practice/: main.py
basic/src/basicAgent/sample/: Plan-and-Solve.py  ReAct.py  Reflection.py
basic/src/basicAgent/tools/: Prompt.py  WebSearch.py
basic/src/basicAgent/utils/: HelloAgentsLLM.py  Tool.py
