[project]
name = "basic"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "agentscope==1.0.16",
    "aiofiles==25.1.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.3",
    "aioitertools==0.13.0",
    "aiosignal==1.4.0",
    "annotated-types==0.7.0",
    "anthropic==0.84.0",
    "anyio==4.12.1",
    "astor==0.8.1",
    "attrs==25.4.0",
    "autogen-agentchat==0.7.5",
    "autogen-core==0.7.5",
    "autogen-ext==0.7.5",
    "bidict==0.23.1",
    "cached-property==2.0.1",
    "camel-ai==0.2.89",
    "certifi==2026.2.25",
    "cffi==2.0.0",
    "charset-normalizer==3.4.5",
    "click==8.3.1",
    "colorama==0.4.6",
    "cryptography==46.0.5",
    "dashscope==1.25.13",
    "distro==1.9.0",
    "docstring-parser==0.17.0",
    "dotenv==0.9.9",
    "frozenlist==1.8.0",
    "google-search-results==2.4.2",
    "googleapis-common-protos==1.73.0",
    "greenlet==3.3.2",
    "grpcio==1.78.0",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "httpx==0.28.1",
    "httpx-sse==0.4.3",
    "idna==3.11",
    "importlib-metadata==8.7.1",
    "jinja2==3.1.6",
    "jiter==0.13.0",
    "json-repair==0.58.5",
    "json5==0.13.0",
    "jsonref==1.1.0",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "loguru==0.7.3",
    "markupsafe==3.0.3",
    "mcp==1.26.0",
    "multidict==6.7.1",
    "numpy==2.4.2",
    "openai==2.26.0",
    "opentelemetry-api==1.40.0",
    "opentelemetry-exporter-otlp==1.40.0",
    "opentelemetry-exporter-otlp-proto-common==1.40.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.40.0",
    "opentelemetry-exporter-otlp-proto-http==1.40.0",
    "opentelemetry-proto==1.40.0",
    "opentelemetry-sdk==1.40.0",
    "opentelemetry-semantic-conventions==0.61b0",
    "pillow==12.1.1",
    "propcache==0.4.1",
    "protobuf==5.29.6",
    "psutil==5.9.8",
    "pycparser==3.0",
    "pydantic==2.12.0",
    "pydantic-core==2.41.1",
    "pydantic-settings==2.13.1",
    "pyjwt==2.11.0",
    "python-datauri==3.0.2",
    "python-dotenv==1.2.2",
    "python-engineio==4.13.1",
    "python-frontmatter==1.1.0",
    "python-multipart==0.0.22",
    "python-socketio==5.16.1",
    "pywin32==311",
    "pyyaml==6.0.3",
    "referencing==0.37.0",
    "regex==2026.2.28",
    "requests==2.32.5",
    "rpds-py==0.30.0",
    "shortuuid==1.0.13",
    "simple-websocket==1.1.0",
    "sniffio==1.3.1",
    "sounddevice==0.5.5",
    "sqlalchemy==2.0.48",
    "sse-starlette==3.3.2",
    "starlette==0.52.1",
    "tiktoken==0.12.0",
    "tqdm==4.67.3",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.2",
    "urllib3==2.6.3",
    "uvicorn==0.41.0",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "win32-setctime==1.2.0",
    "wsproto==1.3.2",
    "yarl==1.23.0",
    "zipp==3.23.0",
]

[tool.setuptools.packages.find]
where = ["src"]
